<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="77dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher_background"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/login"
        app:backgroundTint="@null"
        android:background="@drawable/gradation_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/signup_btn"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/forget_btn"
        android:layout_width="180dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/forget"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>